samples/_failures_safe/1761731497_27fda6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14780f17.c: In function ‘main’:
./samples/SAFE/__tmp_14780f17.c:196:5: error: expected expression at end of input
  196 |     if (token_count <= 0)
      |     ^~
./samples/SAFE/__tmp_14780f17.c:196:5: error: expected declaration or statement at end of input
